--- a/build.yaml
+++ b/build.yaml
@@ -20,9 +20,9 @@
 include:
   - board: nice_nano_v2
     shield: murphpad
-include:
-  - board: nice_nano_v2
-    shield: murphpad
-include:
-  - board: nice_nano_v2
-    shield: murphpad
+# include:
+#   - board: nice_nano_v2
+#     shield: murphpad
+# include:
+#   - board: nice_nano_v2
+#     shield: murphpad
