--- a/config/murphpad.conf
+++ b/config/murphpad.conf
@@ -5,7 +5,7 @@
 # Uncomment both to enable encoder(s)
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
-
+CONFIG_ZMK_STUDIO=y
 # Uncomment to disable OLED
 #CONFIG_ZMK_DISPLAY=n
 
