--- a/build.yaml
+++ b/build.yaml
@@ -20,6 +20,7 @@
 include:
   - board: nice_nano_v2
     shield: murphpad
+    snippet: studio-rpc-usb-uart
 # include:
 #   - board: nice_nano_v2
 #     shield: murphpad
